--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/ico" href="favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <script src="/dist/index.js" type="module"></script>
   </head>
   <body>
